<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashWasting</string>
    <string name="button_add">Add new wasting</string>
    <string name="desc">Description</string>
    <string name="amount_of_cash">Amount of cash</string>
    <string name="history">History</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="search">Search history</string>
    <string name="change_date">Change date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="db">Export db</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>