<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/date_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:inputType="date" />

    <EditText
        android:id="@+id/time_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:inputType="time" />

    <EditText
        android:id="@+id/cash_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_of_cash"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <AutoCompleteTextView
        android:id="@+id/desc_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete|textCapSentences" />

</LinearLayout>