<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/history_layout_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/start_date"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <EditText
            android:id="@+id/edit_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:inputType="none" />

        <Button
            android:id="@+id/change_end_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_layout_end"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/end_date"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <EditText
            android:id="@+id/edit_end"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:inputType="none" />

        <Button
            android:id="@+id/change_start_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_date" />
    </LinearLayout>

    <Button
        android:id="@+id/history_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <TextView
        android:id="@+id/text_wasted_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:clickable="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_cashs_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linear_dates_time_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</LinearLayout>